--- a/courselist.html
+++ b/courselist.html
@@ -12,10 +12,10 @@
 </head>
 <body>
 <table class="easyui-datagrid" style="width:100%;height:550px"
-       title="活动列表" toolbar="#tb"
+       title="课程列表" toolbar="#tb"
        singleSelect="true" fitColumns="true" id="actlist">
 </table>
-<div id="addialog" class="easyui-dialog" title="添加活动" style="width:400px;height:auto;padding:10px">
+<div id="addialog" class="easyui-dialog" title="添加课程" style="width:400px;height:auto;padding:10px">
     <form action="" id="formlist">
         <table cellpadding="5">
             <tr>
@@ -79,7 +79,7 @@
         pageSize: 10,
         pageList: [10],
         queryParams: {
-            type: 2
+            type: 1
         },
         loadFilter: function (data) {
             if (data.data) {
@@ -163,7 +163,7 @@
                 }
 
                 $("#addialog .error").addClass("hide")
-                postdata.type = 2
+                postdata.type = 1
                 insertRow(postdata)
 
             }
