certificate & ebmanagent modify wrong type queryparma

--- a/ebmanagemen.html
+++ b/ebmanagemen.html
@@ -90,7 +90,7 @@
         pageSize: 10,
         pageList: [10],
         queryParams:{
-            usertype: 1
+            type: 1
         },
         loadFilter: function (data) {
             if (data.data) {
