--- a/certificate.html
+++ b/certificate.html
@@ -90,7 +90,7 @@
         pageSize: 10,
         pageList: [10],
         queryParams:{
-            usertype: 2
+            type: 2
         },
         loadFilter: function (data) {
             if (data.data) {
