--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div data-options="region:'center'">
         <div class="easyui-layout" data-options="fit:true">
 			<div data-options="region:'north'" class="header" style="height:110px">
-				<a href="#" class="easyui-linkbutton fr" data-options="iconCls:'icon-undo'">退出登录</a>
+				<a href="#" class="easyui-linkbutton fr" data-options="plain:true,iconCls:'icon-back'">退出登录</a>
 				<span class="welcometip fr">登录用户：<span class="username">刘昴星</span>，北京经贸学院校园信息门户系统欢迎您！</span>
 			</div>
             <div data-options="region:'west'" title="功能导航" style="width:220px">
