enroll readyonly false

--- a/enroll.html
+++ b/enroll.html
@@ -177,7 +177,7 @@
         if(optype == 2){
             $('#ftype').textbox('readonly',true);
         }else{
-            $('#ftype').textbox('readonly',;
+            $('#ftype').textbox('readonly',false);
         }
         $("#addialog").dialog({
             closed: true,
