--- a/economic.html
+++ b/economic.html
@@ -14,7 +14,7 @@
 <div class="easyui-dialog" id="filelist" title="文件列表" closed="true"
      style="width:300px;height:auto;padding:10px"></div>
 <table class="easyui-datagrid" style="width:100%;height:550px"
-       title="国际经济贸易系菜单列表" toolbar="#tb"
+       title="经济管理系菜单列表" toolbar="#tb"
        singleSelect="true" fitColumns="true" id="classlist">
 </table>
 <div id="addialog" class="easyui-dialog" closed="true" style="width:auto;height:auto;padding:10px">
@@ -124,7 +124,7 @@
         pageSize: 10,
         pageList: [10],
         queryParams:{
-            collegeId: 1
+            collegeId: 2
         },
         loadFilter: function (data) {
             if (data.data) {
@@ -250,7 +250,7 @@
                         postdata.menuId = menuId
                     }
                     if(optype === 1){
-                        postdata.collegeId = 1
+                        postdata.collegeId = 2
 
                     }
                     optype==1?insertRow(postdata):updateRow(postdata)
@@ -266,7 +266,7 @@
                 $("#addialog").dialog("close")
                 alert("添加成功")
                 $("#classlist").datagrid('reload', {
-                    collegeId: 1
+                    collegeId: 2
                 })
             } else {
                 alert(json.msg)
@@ -292,7 +292,7 @@
 
     function editrow() {
         var row = $('#classlist').datagrid('getSelected')
-        $.post(commonURL + 'm/webmenu/listCollegemenus.do', {id: row.id, collegeId: 1}, function (json) {
+        $.post(commonURL + 'm/webmenu/listCollegemenus.do', {id: row.id, collegeId: 2}, function (json) {
             if(json.success){
                 var data = json.data.rows[0]
                 data["contentType"] = data["content_type"]
