--- a/comart.html
+++ b/comart.html
@@ -14,7 +14,7 @@
 <div class="easyui-dialog" id="filelist" title="文件列表" closed="true"
      style="width:300px;height:auto;padding:10px"></div>
 <table class="easyui-datagrid" style="width:100%;height:550px"
-       title="国际经济贸易系菜单列表" toolbar="#tb"
+       title="计算机技术与艺术设计系菜单列表" toolbar="#tb"
        singleSelect="true" fitColumns="true" id="classlist">
 </table>
 <div id="addialog" class="easyui-dialog" closed="true" style="width:auto;height:auto;padding:10px">
@@ -102,21 +102,6 @@
         valueField: 'value',
         textField: 'text'
     })
-//    $("input[name=teacher_type]").combobox({
-//        data: teachtype,
-//        valueField: 'value',
-//        textField: 'text'
-//    })
-//    $("input[name=contract_type]").combobox({
-//        data: contract_type,
-//        valueField: 'value',
-//        textField: 'text'
-//    })
-//    $("input[name=work_status]").combobox({
-//        data: work_status,
-//        valueField: 'value',
-//        textField: 'text'
-//    })
 
     $('#classlist').datagrid({
         url: commonURL + 'm/webmenu/listCollegemenus.do',
@@ -124,7 +109,7 @@
         pageSize: 10,
         pageList: [10],
         queryParams:{
-            collegeId: 1
+            collegeId: 3
         },
         loadFilter: function (data) {
             if (data.data) {
@@ -250,7 +235,7 @@
                         postdata.menuId = menuId
                     }
                     if(optype === 1){
-                        postdata.collegeId = 1
+                        postdata.collegeId = 3
 
                     }
                     optype==1?insertRow(postdata):updateRow(postdata)
@@ -266,7 +251,7 @@
                 $("#addialog").dialog("close")
                 alert("添加成功")
                 $("#classlist").datagrid('reload', {
-                    collegeId: 1
+                    collegeId: 3
                 })
             } else {
                 alert(json.msg)
@@ -292,7 +277,7 @@
 
     function editrow() {
         var row = $('#classlist').datagrid('getSelected')
-        $.post(commonURL + 'm/webmenu/listCollegemenus.do', {id: row.id, collegeId: 1}, function (json) {
+        $.post(commonURL + 'm/webmenu/listCollegemenus.do', {id: row.id, collegeId: 3}, function (json) {
             if(json.success){
                 var data = json.data.rows[0]
                 data["contentType"] = data["content_type"]
